--- a/src/components/Home/Header/Head/head.module.css
+++ b/src/components/Home/Header/Head/head.module.css
@@ -1,27 +1,49 @@
 .Head {
-    width: 90vw;
-    margin-inline: 5vw;
+    width: 60vw;
+    margin-inline: 20vw;
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border: 1px solid red;
 
+    .Head_Logo {
+        object-fit: cover;
+
+        img {
+            max-width: 250px;
+        }
+    }
+
     .Head_Count {
         img {
-            width: 20px;
+            width: 30px;
             aspect-ratio: 1;
         }
     }
 
     .Head_Search {
-        width: 50%;
+        width: 60%;
         background-color: rgba(148, 193, 225, 0.2);
+        border-radius: 25px;
 
         input {
-            width: 100%;
-            height: 100%;
+            width: 90%;
+            height: 45px;
+            padding-left: 20px;
+            font-size: 14px;
             background-color: transparent;
+            border: transparent;
+        }
+
+        button {
+            display: inline;
+            background-color: var(--BG_SecondColor);
+            border: 1px solid red;
+
+            img {
+                width: 20px;
+            }
         }
     }
 
