--- a/src/components/Home/Header/Head/head.module.css
+++ b/src/components/Home/Header/Head/head.module.css
@@ -1,6 +1,6 @@
 .Head {
-    width: 60vw;
-    margin-inline: 20vw;
+    width: 50vw;
+    margin-inline: 25vw;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -15,35 +15,38 @@
         }
     }
 
-    .Head_Count {
-        img {
-            width: 30px;
-            aspect-ratio: 1;
-        }
-    }
-
     .Head_Search {
         width: 60%;
+        height: 45px;
         background-color: rgba(148, 193, 225, 0.2);
-        border-radius: 25px;
+        border-radius: 25px 0 0 25px;
+        overflow: hidden;
 
         input {
-            width: 90%;
-            height: 45px;
+            width: 80%;
+            height: 100%;
             padding-left: 20px;
             font-size: 14px;
             background-color: transparent;
             border: transparent;
+            outline: none;
+
         }
 
         button {
-            display: inline;
-            background-color: var(--BG_SecondColor);
-            border: 1px solid red;
+            width: 10%;
 
             img {
-                width: 20px;
+                width: 25px;
+
             }
+        }
+    }
+
+    .Head_Count {
+        img {
+            width: 30px;
+            aspect-ratio: 1;
         }
     }
 
