--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --BG_PrimaryColor: #fff;
-  --BG_SecondColor: #002336;
+  --BG_SecondColor: #004164;
 }
 
 * {
@@ -12,6 +12,7 @@
 }
 
 body {
+  max-width: 100vw;
   font-family: "Nunito Sans",
     sans-serif;
   background-color: var(--BG_PrimaryColor);
