--- a/src/components/Home/Header/Head/head.module.css
+++ b/src/components/Home/Header/Head/head.module.css
@@ -1,6 +1,6 @@
 .Head {
-    width: 50vw;
-    margin-inline: 25vw;
+    width: 60vw;
+    margin-inline: 20vw;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -18,8 +18,6 @@
     .Head_Search {
         width: 60%;
         height: 45px;
-        background-color: rgba(148, 193, 225, 0.2);
-        border-radius: 25px 0 0 25px;
         overflow: hidden;
 
         input {
@@ -27,14 +25,18 @@
             height: 100%;
             padding-left: 20px;
             font-size: 14px;
-            background-color: transparent;
-            border: transparent;
+            background-color: rgba(148, 193, 225, 0.2);
+            border-radius: 25px 0 0 25px;
             outline: none;
+            border: none;
 
         }
 
         button {
             width: 10%;
+            background-color: beige;
+            border: none;
+            border-radius: 0 25px 25px 0;
 
             img {
                 width: 25px;
@@ -50,4 +52,18 @@
         }
     }
 
+}
+
+@media screen and (760px <=width <=1024px) {
+    .head {
+        width: 50vw;
+        margin-inline: 25vw;
+    }
+}
+
+@media screen and (width <=760px) {
+    .head {
+        width: 90vw;
+        margin-inline: 5vw;
+    }
 }
