--- a/src/components/Home/Header/Top/top.module.css
+++ b/src/components/Home/Header/Top/top.module.css
@@ -6,8 +6,8 @@
 }
 
 .menu_top {
-    width: 50vw;
-    margin-inline: 25vw;
+    width: 60vw;
+    margin-inline: 20vw;
     display: flex;
     position: relative;
 
@@ -21,5 +21,19 @@
     & :nth-child(3) {
         position: absolute;
         right: 0;
+    }
+}
+
+@media screen and (760px <=width <=1024px) {
+    .menu_top {
+        width: 50vw;
+        margin-inline: 25vw;
+    }
+}
+
+@media screen and (width <=760px) {
+    .menu_top {
+        width: 90vw;
+        margin-inline: 5vw;
     }
 }
