--- a/src/components/Home/Header/Head/head.module.css
+++ b/src/components/Home/Header/Head/head.module.css
@@ -16,9 +16,10 @@
     }
 
     .Head_Search {
-        width: 60%;
-        height: 45px;
-        overflow: hidden;
+        display: flex;
+        justify-content: start;
+        width: 50%;
+        height: 40px;
 
         input {
             width: 80%;
@@ -32,13 +33,19 @@
 
         }
 
-        button {
+        .search {
+            position: relative;
             width: 10%;
-            background-color: beige;
+            height: 100%;
+            background-color: #004164;
             border: none;
             border-radius: 0 25px 25px 0;
 
             img {
+                width: 50px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
                 width: 25px;
 
             }
