--- a/src/components/Home/ProductContainer/productcontainer.module.css
+++ b/src/components/Home/ProductContainer/productcontainer.module.css
@@ -1,9 +1,18 @@
 .productContainer {
     width: 60vw;
     margin-inline: 20vw;
-    border: 1px solid red;
+    padding: 1rem;
+    margin-bottom: 20px;
 
     h3 {
         font-size: 1.5rem;
+        margin-bottom: 20px;
+    }
+
+    .productList {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
     }
 }
