--- a/src/components/Register/register.module.css
+++ b/src/components/Register/register.module.css
@@ -1,4 +1,4 @@
-.loginContainer {
+.register {
     width: 100vw;
     height: 62vh;
     display: flex;
@@ -6,7 +6,7 @@
     align-items: start;
     margin-top: 10vh;
 
-    .login {
+    .container {
         width: 20%;
         height: auto;
         padding: 1rem;
@@ -20,22 +20,43 @@
             font-size: 2rem;
             font-weight: 700;
             color: var(--BG_SecondColor);
-            margin: 5%;
+            margin: 3%;
         }
 
         form {
-            text-align: left;
+            div {
+                padding: 10px 5px 10px 2px;
 
-            label {
-                font-size: 1.3rem;
+                label {
+                    font-size: 1rem;
+                    display: block;
+                    margin-bottom: .5rem;
+                }
+
+                input {
+                    width: 90%;
+                    height: 40px;
+                    border-radius: 5px;
+                    font-size: .9rem;
+                    padding-left: 10px;
+                }
             }
 
-            input {
-                width: 80%;
-                height: 40px;
-                font-size: 1rem;
-                margin: 0 10% 2% 10%;
+            div:nth-child(6) {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                margin-inline: auto;
 
+                label {
+                    flex-shrink: 0;
+                }
+
+                input {
+                    width: 30px;
+                    aspect-ratio: 1;
+                    flex-shrink: 5;
+                }
             }
 
             button {
@@ -46,9 +67,6 @@
                 font-size: 1.2rem;
                 border-radius: 5px;
                 cursor: pointer;
-            }
-
-            .session {
                 color: white;
                 background-color: var(--BG_SecondColor);
             }
