--- a/src/components/Home/ProductContainer/productcontainer.module.css
+++ b/src/components/Home/ProductContainer/productcontainer.module.css
@@ -1,5 +1,6 @@
 .productContainer {
     width: 60vw;
+    height: fit-content;
     margin-inline: 20vw;
     padding: 1rem;
     margin-bottom: 20px;
