--- a/src/components/Home/ProductContainer/Product/product.module.css
+++ b/src/components/Home/ProductContainer/Product/product.module.css
@@ -4,10 +4,15 @@
     align-items: center;
     row-gap: 10px;
     max-width: 250px;
-    cursor: pointer;
 
-    h4 {
+    h4,
+    h5 {
         text-align: center;
+        text-transform: uppercase;
+    }
+
+    h5 {
+        color: #444444;
     }
 
     strong {
@@ -19,13 +24,6 @@
     img {
         width: 150px;
         height: 200px;
-    }
-
-    button {
-        font-size: 1rem;
-        color: white;
-        border-radius: 5px;
-        background-color: var(--BG_SecondColor);
-        padding: .5rem;
+        cursor: pointer;
     }
 }
