--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -35,6 +35,7 @@
                 height: 40px;
                 font-size: 1rem;
                 margin: 0 10% 2% 10%;
+                padding-left: 20px;
 
             }
 
